tests/machine/x/hs/in_operator_extended.hs
-- Generated by Mochi compiler v0.10.26 on 2025-07-16T15:36:28Z
-- Code generated by Mochi compiler; DO NOT EDIT.
{-# LANGUAGE DeriveGeneric #-}

module Main where

import qualified Data.Map as Map

xs = [1, 2, 3]

ys = [x | x <- filter (\x -> ((x `mod` 2) == 1)) xs]

m = Map.fromList [("a", (1 :: Int))]

s = "hello"

main :: IO ()
main = do
  print (elem 1 ys)
  print (elem 2 ys)
  print (Map.member "a" m)
  print (Map.member "b" m)
  print (isInfixOf "ell" s)
  print (isInfixOf "foo" s)
